--- a/WarechouseInterface/WarechouseInterface.csproj
+++ b/WarechouseInterface/WarechouseInterface.csproj
@@ -246,8 +246,16 @@
     <Compile Include="Db\DbDtos\CategoryDbDto.cs" />
     <Compile Include="Db\DbDtos\ItemDbDto.cs" />
     <Compile Include="Db\DbDtos\PasswordDbDto.cs" />
+    <Compile Include="Db\DbDtos\TransactionDbDto.cs" />
+    <Compile Include="Db\DbDtos\TransactionItemsDbDto.cs" />
+    <Compile Include="Db\DbDtos\TransactionTypeDbDto.cs" />
     <Compile Include="Db\Repositories\CategoryRepository.cs" />
     <Compile Include="Db\Repositories\ItemRepository.cs" />
+    <Compile Include="Db\Repositories\TransactionItemsRepository.cs" />
+    <Compile Include="Db\Repositories\TransactionRepository.cs" />
+    <Compile Include="Db\Repositories\TransactionTypeRepository.cs" />
+    <Compile Include="Dtos\CountValueDto.cs" />
+    <Compile Include="Dtos\FullTransactionDto.cs" />
     <Compile Include="Dtos\ItemDto.cs" />
     <Compile Include="Managers\CategoryManager.cs" />
     <Compile Include="Managers\ImageManager.cs" />
@@ -255,6 +263,7 @@
     <Compile Include="Managers\SqlConnectManager.cs" />
     <Compile Include="Db\DatabaseContext.cs" />
     <Compile Include="Db\Repositories\PasswordRepository.cs" />
+    <Compile Include="Managers\TransactionManager.cs" />
     <Compile Include="Pages\AddCategoryPage.xaml.cs">
       <DependentUpon>AddCategoryPage.xaml</DependentUpon>
     </Compile>
@@ -263,6 +272,12 @@
     </Compile>
     <Compile Include="Pages\EditItemPage.xaml.cs">
       <DependentUpon>EditItemPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\OrderPage.xaml.cs">
+      <DependentUpon>OrderPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\SearchItemPage.xaml.cs">
+      <DependentUpon>SearchItemPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
@@ -292,6 +307,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\LoginPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\OrderPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\SearchItemPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
