--- a/WarehouseInterface/WarehouseInterface.csproj
+++ b/WarehouseInterface/WarehouseInterface.csproj
@@ -284,7 +284,6 @@
     <Compile Include="Managers\CategoryManager.cs" />
     <Compile Include="Managers\ImageManager.cs" />
     <Compile Include="Managers\PasswordManager.cs" />
-    <Compile Include="Managers\SqlConnectManager.cs" />
     <Compile Include="Db\DatabaseContext.cs" />
     <Compile Include="Db\Repositories\PasswordRepository.cs" />
     <Compile Include="Managers\TransactionManager.cs" />
@@ -336,6 +335,7 @@
     <Compile Include="Pages\WindowBehavior.cs" />
     <Compile Include="Tests\Managers\CategoryManagerTest.cs" />
     <Compile Include="Tests\Managers\PasswordManagerTest.cs" />
+    <Compile Include="Tests\Managers\TransactionManagerTest.cs" />
     <Compile Include="Tests\Validators\ItemValidatorTest.cs" />
     <Compile Include="Tests\Validators\PasswordValidatorTest.cs" />
     <Compile Include="Validators\ItemValidator.cs" />
